Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
    ],
    "source": [
     "import requests\n",
-    "macbeth = requests.get('http://www.gutenberg.org/cache/epub/2264/pg2264.txt').text\n",
+    "macbeth = requests.get('https://www.gutenberg.org/files/1533/1533-0.txt').text\n",
     "\n",
     "print(type(macbeth))\n",
     "print(len(macbeth))\n",
