--- a/index.ipynb
+++ b/index.ipynb
@@ -27,19 +27,16 @@
      "output_type": "stream",
      "text": [
       "<class 'str'>\n",
-      "119846\n",
-      "﻿***The Project Gutenberg's Etext of Shakespeare's First Folio***\r\n",
-      "********************The Tragedie of Macbeth*********************\r\n",
+      "128846\n",
+      "Project Gutenberg’s Macbeth, by William Shakespeare\r\n",
       "\r\n",
-      "This is our 3rd edition of most of these plays.  See the index.\r\n",
-      "\r\n",
-      "\r\n",
-      "Copyright laws are changing all over the world, be sure to check\r\n",
-      "the copyright laws for your country before posting these files!!\r\n",
-      "\r\n",
-      "Please take a look at the important information in this header.\r\n",
-      "We encourage you to keep this file on your own disk, keeping an\r\n",
-      "electronic path open for the nex\n"
+      "This eBook is for the use of anyone anywhere in the United States and\r\n",
+      "most other parts of the world at no cost and with almost no restrictions\r\n",
+      "whatsoever. You may copy it, give it away or re-use it under the terms\r\n",
+      "of the Project Gutenberg License included with this eBook or online at\r\n",
+      "www.gutenberg.org. If you are not located in the United States, you’ll\r\n",
+      "have to check the laws of the country where you are located before using\r\n",
+      "this ebook\n"
      ]
     }
    ],
