Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -69,7 +69,10 @@
    },
    "outputs": [],
    "source": [
-    "# Your code here\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline Your code here\n",
     "\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
