Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -63,16 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline Your code here\n",
+    "%matplotlib inline\n",
     "\n",
     "# Pseudo-code Outline\n",
     "# Split the transcript into words\n",
