--- a/index.ipynb
+++ b/index.ipynb
@@ -72,7 +72,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "words = \n",
+    "words = macbeth.spl\n",
     "# Split the transcript into words\n",
     "# Create a dictionary\n",
     "# Iterate through the text of Macbeth\n",
