Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -73,7 +73,7 @@
     "%matplotlib inline\n",
     "\n",
     "words = macbeth.split()\n",
-    "\n",
+    "word_counts\n",
     "# Create a dictionary\n",
     "# Iterate through the text of Macbeth\n",
     "# Update word counts\n",
