--- a/index.ipynb
+++ b/index.ipynb
@@ -73,7 +73,8 @@
     "%matplotlib inline\n",
     "\n",
     "words = macbeth.split()\n",
-    "word_counts = {}\n",
+    "word_counts = \n",
+    "}\n",
     "# Create a dictionary\n",
     "# Iterate through the text of Macbeth\n",
     "# Update word counts\n",
