Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -74,7 +74,8 @@
     "\n",
     "words = macbeth.split()\n",
     "word_counts = {}\n",
-    "√\n",
+    "for word in words:\n",
+    "    word_counts[word] = word_counts.get(word, 0) + 1 \n",
     "# Create a dictionary\n",
     "# Iterate through the text of Macbeth\n",
     "# Update word counts\n",
