Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,6 +76,7 @@
     "word_counts = {}\n",
     "for word in words:\n",
     "    word_counts[word] = word_counts.get(word, 0) + 1 \n",
+    "word\n",
     "# Create a dictionary\n",
     "# Iterate through the text of Macbeth\n",
     "# Update word counts\n",
