--- a/index.ipynb
+++ b/index.ipynb
@@ -76,7 +76,7 @@
     "word_counts = {}\n",
     "for word in words:\n",
     "    word_counts[word] = word_counts.get(word, 0) + 1 \n",
-    "word\n",
+    "word_counts\n",
     "# Create a dictionary\n",
     "# Iterate through the text of Macbeth\n",
     "# Update word counts\n",
